Add code for release 2.7.1